# CPP-mini-Browser

./: CMakeLists.txt  README.md
assets/sample_pages/: index.html
include/dom/: DOMBuilder.hpp  Node.hpp
include/file_loader/: FileLoader.hpp
include/renderer/: Renderer.hpp
include/tokenizer/: Token.hpp  Tokenizer.hpp
src/: main.cpp
src/dom/: DOMBuilder.cpp
src/file_loader/: FileLoader.cpp
src/renderer/: Renderer.cpp
src/tokenizer/: Tokenizer.cpp
